# camera-recording-index

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  nginx.conf
recording_index/: gunicorn.conf.py  manage.py
recording_index/recording_index/: asgi.py  settings.py  urls.py  wsgi.py
recording_index/recordings/: admin.py  models.py  recording_utils.py  timeline_image.py  urls.py  video.py  views.py
recording_index/recordings/management/commands/: load_recordings.py  sort_files.py
recording_index/recordings/migrations/: 0001_initial.py  0002_alter_camera_path_alter_recording_unique_together.py  0003_alter_recording_options_alter_recording_file.py  0004_recording_mtime.py  0005_alter_recording_camera.py
recording_index/recordings/static/recordings/: camera.css  camera.js
recording_index/recordings/templates/recordings/: base.html  timeline.html
